docker-test.yaml
apiVersion: v1
kind: Service
metadata:
  name: docker-test
  namespace: default
  labels:
    app: docker-test
    run: docker-test
spec:
  ports:
  - port: 8001
    name: http
  selector:
    app: docker-test
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: docker-test
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: docker-test
    spec:
      containers:
      - name: docker-test
        image: gcr.io/istio-213219/docker-test:v0
        imagePullPolicy: Always
        ports:
        - containerPort: 8001
---
